# tico

./: CMakeLists.txt  LICENSE  README.md
AArch64-elf/: switch.s
examples/: CMakeLists.txt  basic_in_out.c
include/: tico.h
x86_64-elf/: CMakeLists.txt  switch.s
